removed env variable

--- a/.github/workflows/deploy_app.yml
+++ b/.github/workflows/deploy_app.yml
@@ -48,7 +48,10 @@ jobs:
           # REGISTRY="$3"
           # APP_PATH="$4"
           chmod +rwx ./.github/scripts/build_push_image_to_ecr.sh
-          ./.github/scripts/build_push_image_to_ecr.sh $BACKEND_TAG $ECR_REPO_BACKEND_NAME $REGISTRY app/backend
+          ./.github/scripts/build_push_image_to_ecr.sh \
+            $BACKEND_TAG \
+            $ECR_REPO_BACKEND_NAME \
+            $REGISTRY app/backend
 
       - name: Build and push Frontend image
         run: |
@@ -62,7 +65,10 @@ jobs:
           # REGISTRY="$3"
           # APP_PATH="$4"
           chmod +rwx ./.github/scripts/build_push_image_to_ecr.sh
-          ./.github/scripts/build_push_image_to_ecr.sh $FRONTEND_TAG $ECR_REPO_FRONTEND_NAME $REGISTRY app/frontend
+          ./.github/scripts/build_push_image_to_ecr.sh \
+            $FRONTEND_TAG \
+            $ECR_REPO_FRONTEND_NAME \
+            $REGISTRY app/frontend
 
       - name: Deploy Backend to ECS
         run: |
