--- a/.github/workflows/deploy_app.yml
+++ b/.github/workflows/deploy_app.yml
@@ -42,16 +42,12 @@ jobs:
           REGISTRY=${{ steps.login-ecr.outputs.registry }}
           ECR_REPO_BACKEND_NAME=${{ env.ECR_REPO_BACKEND_NAME }}
 
-          # Arguments
-          # APP_VERSION="$1"
-          # ECR_REPO="$2"
-          # REGISTRY="$3"
-          # APP_PATH="$4"
           chmod +rwx ./.github/scripts/build_push_image_to_ecr.sh
           ./.github/scripts/build_push_image_to_ecr.sh \
             $BACKEND_TAG \
             $ECR_REPO_BACKEND_NAME \
-            $REGISTRY app/backend
+            $REGISTRY \
+            app/backend # APP_PATH="$4"
 
       - name: Build and push Frontend image
         run: |
@@ -59,16 +55,12 @@ jobs:
           REGISTRY=${{ steps.login-ecr.outputs.registry }}
           ECR_REPO_FRONTEND_NAME=${{ env.ECR_REPO_FRONTEND_NAME }}
 
-          # Arguments
-          # APP_VERSION="$1"
-          # ECR_REPO="$2"
-          # REGISTRY="$3"
-          # APP_PATH="$4"
           chmod +rwx ./.github/scripts/build_push_image_to_ecr.sh
           ./.github/scripts/build_push_image_to_ecr.sh \
             $FRONTEND_TAG \
             $ECR_REPO_FRONTEND_NAME \
-            $REGISTRY app/frontend
+            $REGISTRY \
+            app/frontend # APP_PATH="$4"
 
       - name: Deploy Backend to ECS
         run: |
